--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<graphql-version>12.0.0</graphql-version>
+		<graphql-version>11.1.0</graphql-version>
 		<graphql-java-extended-scalars-version>18.1</graphql-java-extended-scalars-version>
 		<graphql.extended.validation.version>16.0.0</graphql.extended.validation.version>
 	</properties>
@@ -60,18 +60,6 @@
 			</exclusions>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>com.graphql-java-kickstart</groupId>-->
-<!--			<artifactId>playground-spring-boot-starter</artifactId>-->
-<!--			<version>${graphql-version}</version>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>com.graphql-java-kickstart</groupId>-->
-<!--			<artifactId>voyager-spring-boot-starter</artifactId>-->
-<!--			<version>${graphql-version}</version>-->
-<!--		</dependency>-->
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -82,6 +70,17 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.1.6.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.graphql-java-kickstart</groupId>
+			<artifactId>playground-spring-boot-starter</artifactId>
+			<version>${graphql-version}</version>
 		</dependency>
 
 		<dependency>
